<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground">


    <TextView
        android:id="@+id/textTitle_tV"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_title"
        android:textColor="@color/colorButton"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/textAmount_tV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textTitle_tV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:textSize="32sp"
        android:text="@string/amount"
        android:textColor="@color/colorButton"
        android:textStyle="normal"/>

    <Button
        android:id="@+id/makeItRainButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:onClick="makeItRainBtn"
        android:textColor="@color/colorText"
        android:textSize="19sp"
        android:textStyle="normal"
        android:background="@color/colorButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAmount_tV"
        android:text="@string/text_makeItRain" />

    <Button
        android:id="@+id/toastButton"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:background="@color/colorButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/makeItRainButton"
        android:text="@string/text_toastMessage"
        android:textColor="@color/colorText"
        android:textSize="19sp"
        android:textStyle="normal"
        android:onClick="toastMessageBtn"/>

    <Button
        android:id="@+id/logButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:background="@color/colorButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toastButton"
        android:text="@string/text_logMessage"
        android:textColor="@color/colorText"
        android:textSize="19sp"
        android:textStyle="normal"
        android:onClick="logMessageBtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>